# DATN_RailRobot

./: .gitignore  README.md
ESP32_Gateway_Firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
ESP32_Gateway_Firmware/main/: CMakeLists.txt  main.c
ESP32_Gateway_Firmware/my_components/led_app/: CMakeLists.txt  led_app.c
ESP32_Gateway_Firmware/my_components/mqtt_app/: CMakeLists.txt  mqtt_app.c
ESP32_Gateway_Firmware/my_components/uart_app/: CMakeLists.txt  uart_app.c
ESP32_Gateway_Firmware/my_components/wifi_manager/: CMakeLists.txt  wifi_manager.c
RaspberryPi_AI_Vision/: README.md  Rasp_Pi_fn.py  railway_model_pi3_3.tflite  requirements.txt
STM32_Robot_Firmware/: .mxproject  README.md  STM32_Robot_Firmware.ioc
STM32_Robot_Firmware/Core/Inc/: MPU6050.h  main.h  usart.h
STM32_Robot_Firmware/Core/Src/: MPU6050.c  tim.c  usart.c  vl53l1_platform.c
STM32_Robot_Firmware/MDK-ARM/: STM32_Robot_Firmware.uvguix.MANH  STM32_Robot_Firmware.uvoptx  STM32_Robot_Firmware.uvprojx  startup_stm32f401xc.lst
STM32_Robot_Firmware/MDK-ARM/STM32_Robot_Firmware/: STM32_Robot_Firmware.axf  STM32_Robot_Firmware.build_log.htm  STM32_Robot_Firmware.htm  STM32_Robot_Firmware.lnp  STM32_Robot_Firmware_STM32_Robot_Firmware.dep  adc.crf  cmsis_os.crf  event_groups.crf  freertos.crf  main.crf  mpu6050.crf  queue.crf  stm32f4xx_hal_adc.crf  stm32f4xx_hal_cortex.crf  stm32f4xx_hal_dma_ex.crf  stm32f4xx_hal_flash_ex.crf  stm32f4xx_hal_flash_ramfunc.crf  stm32f4xx_hal_msp.crf  (+8 more)
Web_Dashboard/: README.md  app.js  config_template.js  index.html  style.css
(+52 files in other folders)
